# confidential-computing.sgx

./: .gitignore  .gitmodules  License.txt  Makefile  README.md  buildenv.mk
.github/workflows/: c-cpp.yml  codeql.yml  extension_dispatch_event.yml
SampleCode/LocalAttestation/EnclaveResponder/: Makefile
SampleCode/SampleDNNL/: Makefile
common/inc/: sgx_error.h  sgx_quote.h
common/inc/internal/: se_quote_internal.h  se_version.h
common/inc/internal/oal/: uae_oal_api.h
linux/installer/common/psw/: Makefile  createTarball.sh  install.sh
linux/installer/common/psw-dcap/: Makefile  installConfig
linux/installer/common/psw/BOMs/: psw_base.txt  psw_x64.txt  psw_x86.txt
linux/installer/common/sdk/BOMs/: sdk_base.txt  sdk_cve_2020_0551_cf.txt  sdk_cve_2020_0551_load.txt  sdk_x64.txt  sdk_x86.txt
linux/installer/common/sgx-aesm-service/: Makefile  createTarball.sh  installConfig
linux/installer/deb/sgx-aesm-service/: build.sh
linux/installer/docker/: Dockerfile
linux/installer/rpm/libsgx-enclave-common/: libsgx-enclave-common.spec
linux/installer/rpm/libsgx-uae-service/: libsgx-uae-service.spec
linux/installer/rpm/psw-dcap/: psw-dcap.spec.tmpl
linux/installer/rpm/psw-tdx/: psw-tdx.spec.tmpl
linux/installer/rpm/sgx-aesm-service/: build.sh  libsgx-ae-epid.spec  libsgx-ae-le.spec  libsgx-ae-pce.spec  libsgx-aesm-ecdsa-plugin.spec  libsgx-aesm-epid-plugin.spec  libsgx-aesm-launch-plugin.spec  libsgx-aesm-pce-plugin.spec  libsgx-aesm-quote-ex-plugin.spec  sgx-aesm-service.spec
linux/reproducibility/: Dockerfile  README.md  build_and_launch_docker.sh  start_build.sh.tmp
linux/reproducibility/ae_reproducibility_verifier/: README.md
psw/ae/: Makefile  buildenv.mk
psw/ae/aesm_service/: Makefile
psw/ae/aesm_service/config/network/: aesmd.conf
psw/ae/aesm_service/source/: CMakeLists.txt
psw/ae/aesm_service/source/core/: main.cpp  (+2 more)
psw/ae/aesm_service/source/oal/: CMakeLists.txt
psw/ae/aesm_service/source/oal/linux/: aesm_util.cpp  internal_log.cpp  persistent_storage_table.cpp
psw/ae/inc/: aeerror.h
psw/ae/inc/internal/: pce_cert.h  se_ecdsa_verify_internal.h  tlv_common.h
psw/ae/pce/: Makefile  pce.cpp
psw/ae/ref_le/ref_keys/: wl_cfg.csv
psw/uae_service/: legacy_uae_service.cpp  sgx_uae_service.cpp
psw/uae_service/linux/: Makefile  uae_service.lds
psw/uae_service/uae_wrapper/src/: uae_api.cpp
sdk/: Makefile.source
sdk/cpprt/: Makefile
sdk/debugger_interface/linux/: Makefile
sdk/selib/: sgx_verify_report2.cpp
sdk/simulation/uae_service_sim/: quoting_sim.cpp
sdk/simulation/uae_service_sim/linux/: Makefile
sdk/tlibcrypto/sgxssl/: init_tcrypto_lib.cpp
sdk/trts/: trts_veh.cpp
(+47 files in other folders)
